--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <meta property="og:type" content="website" />
     <meta property="og:image" content="#" />
 
-    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:card" content="" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="#" />
+    <!-- comment   <link rel="icon" href="/favicon.ico" />-->
+    <!-- <link rel="apple-touch-icon" href="/placeholder.svg" /> -->
   </head>
 
   <body>
