Update favicon links and add dev favicon SVG

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
     <meta name="twitter:card" content="" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="#" />
-    <!-- comment   <link rel="icon" href="/favicon.ico" />-->
-    <!-- <link rel="apple-touch-icon" href="/placeholder.svg" /> -->
+      <link rel="icon" type="image/svg+xml" href="/dev-favicon.svg" />
+      <link rel="icon" href="/dev-favicon.svg" />
+      <link rel="apple-touch-icon" href="/placeholder.svg" />
+      <meta name="theme-color" content="#0f172a" />
   </head>
 
   <body>
