--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     <meta name="twitter:card" content="" />
     <meta name="twitter:site" content="" />
     <meta name="twitter:image" content="#" />
-      <link rel="icon" type="image/svg+xml" href="/dev-favicon.svg" />
-      <link rel="icon" href="/dev-favicon.svg" />
+      <link rel="icon" type="image/svg+xml" href="/dev-favicon.svg?v=2" />
+      <link rel="icon" href="/dev-favicon.svg?v=2" />
       <link rel="apple-touch-icon" href="/placeholder.svg" />
       <meta name="theme-color" content="#0f172a" />
   </head>
